--- a/lib1/package.json
+++ b/lib1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib1",
+  "name": "@rushjstest/lib1",
   "version": "0.1.0",
   "description": "",
   "main": "dist/main.js",
@@ -12,6 +12,6 @@
   "devDependencies": {
     "webpack": "4.16.3",
     "webpack-cli": "3.1.0",
-    "lib2": "0.1.0"
+    "@rushjstest/lib2": "0.1.0"
   }
 }
